# wineinfo-vst3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
patches/: vst3sdk-cmake.patch  vst3sdk-public-sdk.patch
src/: controller.cpp  controller.h  factory.cpp  pluginids.h  processor.cpp  processor.h  view_win32.cpp  view_win32.h  wineinfo.cpp  wineinfo.h
toolchains/: aligned_alloc.h  mingw-w64-x86_64.cmake
